k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://*.netlify.app, https://*.github.io"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PATCH, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Content-Length, Content-Range, Authorization, Content-Security-Policy"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - timetracker.pp.ua
      secretName: myapp-tls
  rules:
    - host: timetracker.pp.ua
      http:
        paths:
          - path: /api/subtask
            pathType: ImplementationSpecific
            backend:
              service:
                name: task-service
                port:
                  number: 80
          - path: /api/task
            pathType: ImplementationSpecific
            backend:
              service:
                name: task-service
                port:
                  number: 80
          - path: /api/session
            pathType: ImplementationSpecific
            backend:
              service:
                name: task-service
                port:
                  number: 80
          - path: /api/auth
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /api/user
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /task-service/swagger-ui
            pathType: ImplementationSpecific
            backend:
              service:
                name: task-service
                port:
                  number: 80
          - path: /task-service/v3/api-docs
            pathType: ImplementationSpecific
            backend:
              service:
                name: task-service
                port:
                  number: 80
          - path: /user-service/swagger-ui
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /user-service/v3/api-docs
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 80
